# starwinds-analysis

./: .gitignore  AGENTS.md  LICENSE  README.md  environment.yml  logging-plan.md  planet.py  pyproject.toml
batwind/: __init__.py  _batread_compat.py  _smart_ds_graph.py  _smart_ds_resample.py  constants.py  param_in.py  quicklook2d.py  smart_ds.py  utils.py  vtk_utils.py
docs/: README.md  bad-practices.md  batplotlib-test-migration-checklist.md  function-audit-notes.md  goal-audit.md  octree_interpolator_performance_report.md  quicklook-feature-plan.md  shim-sized-function-audit.md  technical-debt-remediation-plan.md  technical-debt.md
examples/: alfven_radius_shell.ipynb  cartesian_octree_read_large_file.ipynb  keplerellipse_trajectory.ipynb  octree_interpolator_demo.ipynb  orbit_surface_revolution.ipynb  plain_ds_read_3d_dat.py  planet.py  smartds_2d_xy_points.ipynb  smartds_inner_boundary_magnetic_zdi.ipynb  smartds_legacy_quicklook_profiles.ipynb  smartds_quicklook_profiles.ipynb  smartds_radial_histograms.ipynb  smartds_shell_mass_flux.ipynb
sample_data/: 3d__var_2_n00006003.plt  3d__var_2_n00060005.plt  PARAM.in  POYNTINGFLUX.in  STAR.in
starwinds_analysis/: _smart_ds_graph.py  _smart_ds_resample.py  constants.py  octree_interpolator.py  param_in.py  quicklook2d.py  smart_ds.py  utils.py  vtk_utils.py
test/: code_rules_baseline.json  test_alfven_radius.py  test_batwind_pipe.py  test_batwind_pipe_results.py  test_code_rules.py  test_emission.py  test_function_docstrings.py  test_installation.py  test_integrals.py  test_interactive.py  test_isosurface.py  test_light_curves.py  test_line_profiles.py  test_minimal.py  test_octree_advanced.py  test_octree_builder_edge_cases.py  test_octree_fake_edge_cases.py  test_octree_integration.py  test_octree_interpolator.py  test_octree_interpolator_edge_cases.py  test_octree_lookup_interpolation_synthetic.py  test_octree_performance.py  test_octree_persistence.py  test_octree_regressions.py  test_orbit_analysis.py  test_orbit_pressure.py  (+18 more)
(+140 files in other folders)
