[project]
name = "batwind"
description = "Process SWMF/BATSRUS output"
version = "0.1.0"
dependencies = ["scipy", "numpy", "matplotlib", "slugify", "batread", "griblet", "batcamp"]

[project.scripts]
batwind-pipe = "batwind.pipelines.batwind_pipe:main"
batwind-pipe-results = "batwind.pipelines.batwind_pipe_results:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["batwind*"]

[project.optional-dependencies]
tests = ["pytest", "pytest-console-scripts", ]
