[project]
name = "batwind"
description = "Process SWMF/BATSRUS output"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["scipy", "numpy", "matplotlib", "slugify", "colorlog", "batread>=1.1.0", "griblet>=0.3.0", "batcamp>=0.3.1"]

[project.scripts]
batwind-pipe = "batwind.pipelines.batwind_pipe:main"
batwind-pipe-results = "batwind.pipelines.batwind_pipe_results:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["batwind*"]

[project.optional-dependencies]
tests = ["pytest", "pytest-console-scripts", "pytest-cov", "flake8", "pooch", "colorcet", "colorspacious"]

[tool.pytest.ini_options]
markers = [
  "pooch: tests that fetch sample files via pooch/network",
]
